add submodule unpkg

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "crosstools"]
 	path = crosstools
 	url = https://github.com/OpenNoahEdu/ingenic-jz-crosstools-src.git
+[submodule "unpkg"]
+	path = unpkg
+	url = https://github.com/OpenNoahEdu/unpkg.git
