--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "np_tools"]
 	path = np_tools
 	url = https://github.com/OpenNoahEdu/np_tools.git
+[submodule "u-boot"]
+	path = u-boot
+	url = https://github.com/OpenNoahEdu/ingenic-u-boot.git
